--- a/src/app/styles/partials/_theme.scss
+++ b/src/app/styles/partials/_theme.scss
@@ -2,3 +2,12 @@ html{
     font-family: $generalFontFamily;
     color:$blackText;
 }
+body{
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
